--- a/ex1-bubble-tea-shop/index.html
+++ b/ex1-bubble-tea-shop/index.html
@@ -1,22 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./style.css" />
+    <title>Positioned Layout Exercise 1 Bubble Tea Shop</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="./style.css" />
-  <title>Positioned Layout Exercise 1 Bubble Tea Shop</title>
-</head>
-
-<body>
-  <!-- Start coding here -->
-  <div>
-    <img src="./preview-img.jpeg" />
-    <div>Kully-Qoo Bubble Tea ตลาดปากน้ำ</div>
-    <div>ปากน้ำ</div>
-    <div></div>
-  </div>
-</body>
-
+  <body>
+    <!-- Start coding here -->
+    <div class="card">
+      <img src="./preview-img.jpeg" />
+      <div class="detail">Kully-Qoo Bubble Tea ตลาดปากน้ำ</div>
+      <div class="location">ปากน้ำ</div>
+      <div class="bg-detail"></div>
+      <div></div>
+    </div>
+  </body>
 </html>
