--- a/ex2-techup-chatroom/index.html
+++ b/ex2-techup-chatroom/index.html
@@ -1,20 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="./style.css" />
-  <script src="https://kit.fontawesome.com/bf7220ad33.js" crossorigin="anonymous"></script>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Sarabun&display=swap" rel="stylesheet">
-  <title>Positioned Layout Exercise 2 TechUp Chatroom</title>
-</head>
-
-<body>
-  <!-- Start coding here -->
-</body>
-
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./style.css" />
+    <script
+      src="https://kit.fontawesome.com/bf7220ad33.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Sarabun&display=swap"
+      rel="stylesheet"
+    />
+    <title>Positioned Layout Exercise 2 TechUp Chatroom</title>
+  </head>
+  <nav>
+    <h1>Techup Chatroom</h1>
+  </nav>
+  <body>
+    <!-- Start coding here -->
+    <div class="send">
+      <p>สวัสดีจ้า</p>
+      <p class="delete">Coding สนุกจังเลย</p>
+      <p>🥳🤩</p>
+    </div>
+    <div class="receive">
+      <p>😍</p>
+      <p>🥳</p>
+    </div>
+    <div class="cancle">x</div>
+    <div class="start"></div>
+    <div class="half"></div>
+  </body>
 </html>
